cairo (1.10.2-2) unstable; urgency=low

  * debian/control:
    + Let libcairo2-dev depend on libcairo-script-interpreter2 to
      prevent dangling symlinks.
  * Upload to unstable.
  * debian/rules:
    + Enable tee surface (Closes: #609978).
  * debian/control,
    debian/rules:
    + Enable the OpenGL/EGL backend (Closes: #611692).

 -- Sebastian Dröge <slomo@debian.org>  Tue, 08 Feb 2011 09:42:30 +0100

cairo (1.10.2-1) experimental; urgency=low

  * New upstream bugfix release:
    + debian/patches/01_build_perf_utils.patch,
      debian/patches/02_am-maintainer-mode.patch:
      - Refresh patches.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 28 Dec 2010 14:45:49 +0100

cairo (1.10.0-1) experimental; urgency=low

  [ Alexandros Frantzis ]
  * debian/control:
    + Add libcairo-script-interpreter2 package.
    + Add cairo-perf-utils package (Closes: #587771).
  * debian/libcairo-script-interpreter2.install,
    debian/cairo-perf-utils.install:
    + Add installation file list for new binary packages.
  * debian/libcairo-script-interpreter2.symbols:
    + Add new symbols for libcairo-script-interpreter.so library.
  * debian/libcairo2-dev.install:
    + Install the libcairo-script-interpreter.so symbolic link.
  * debian/rules:
    + Enable building of cairo-perf-* utilities.
    + Run dh_makeshlibs for the libcairo-script-interpreter2 package.
  * debian/patches/01_build_perf_utils.patch,
    debian/patches/99_autoreconf.patch:
    + Build cairo-perf-* utils as part of the normal build process.

  [ Sebastian Dröge ]
  * New upstream stable release (Closes: #595897):
    + debian/libcairo2.symbols,
      debian/libcairo-script-interpreter2.symbols,
      debian/rules:
      - Update symbols and shlibs to the stable version.
    + debian/control:
      - Update pixman build dependency to >= 0.18.4.
    + debian/patches/01_build_perf_utils.patch:
      - Refreshed.
    + debian/control,
      debian/libcairo-gobject2.symbols,