@@ -407,6 +407,7 @@ AC_DEFUN([CAIRO_REPORT],
 	echo "The following features and utilities:"
 	echo "  cairo-trace:                $use_trace"
 	echo "  cairo-script-interpreter:   $use_interpreter"
+	echo "  cairo-perf-utils:           $use_perf_utils"
 	echo ""
 	echo "And the following internal features:"
 	echo "  pthread:       $use_pthread"
