@@ -81,6 +81,17 @@ libcairo.so.2 libcairo2 #MINVER#
  cairo_get_target@Base 1.2.4
  cairo_get_tolerance@Base 1.2.4
  cairo_get_user_data@Base 1.4.10
+ cairo_gl_surface_create@Base 1.10.2-2~
+ cairo_gl_surface_create_for_egl@Base 1.10.2-2~
+ cairo_gl_surface_create_for_texture@Base 1.10.2-2~
+ cairo_gl_surface_create_for_window@Base 1.10.2-2~
+ cairo_gl_surface_get_height@Base 1.10.2-2~
+ cairo_gl_surface_get_width@Base 1.10.2-2~
+ cairo_gl_surface_set_size@Base 1.10.2-2~
+ cairo_gl_surface_swapbuffers@Base 1.10.2-2~
+ cairo_glx_device_create@Base 1.10.2-2~
+ cairo_glx_device_get_context@Base 1.10.2-2~
+ cairo_glx_device_get_display@Base 1.10.2-2~
  cairo_glyph_allocate@Base 1.7.2
  cairo_glyph_extents@Base 1.2.4
  cairo_glyph_free@Base 1.7.2
@@ -283,6 +294,10 @@ libcairo.so.2 libcairo2 #MINVER#
  cairo_svg_surface_create_for_stream@Base 1.2.4
  cairo_svg_surface_restrict_to_version@Base 1.2.4
  cairo_svg_version_to_string@Base 1.2.4
+ cairo_tee_surface_add@Base 1.10.2-2~
+ cairo_tee_surface_create@Base 1.10.2-2~
+ cairo_tee_surface_index@Base 1.10.2-2~
+ cairo_tee_surface_remove@Base 1.10.2-2~
  cairo_text_cluster_allocate@Base 1.7.2
  cairo_text_cluster_free@Base 1.7.2
  cairo_text_extents@Base 1.2.4
