@@ -9,8 +9,11 @@ cairo (1.10.2-2) unstable; urgency=low
   * debian/control,
     debian/rules:
     + Enable the OpenGL/EGL backend (Closes: #611692).
+  * debian/libcairo2.symbols,
+    debian/rules:
+    + Update shlibs and symbols files.
 
- -- Sebastian Dröge <slomo@debian.org>  Tue, 08 Feb 2011 09:42:30 +0100
+ -- Sebastian Dröge <slomo@debian.org>  Tue, 08 Feb 2011 09:54:30 +0100
 
 cairo (1.10.2-1) experimental; urgency=low
 
